<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignInActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/login_man"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image"
        android:text="@string/login_label"
        android:textSize="48sp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_32"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edittext"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@+id/login_label"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_8"
        android:paddingStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_8"/>


    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edittext"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"/>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_32"
        android:padding="@dimen/margin_8"/>



    <TextView
        android:id="@+id/signup_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have a account ? Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"

        android:layout_marginBottom="@dimen/margin_8"
        android:textStyle="bold"
        />

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/black"
            android:alpha="0.1"
            android:visibility="invisible"
            >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>